added tests for community track plugin

--- a/plugins/community_track/views/content_viewer/step.rhtml
+++ b/plugins/community_track/views/content_viewer/step.rhtml
@@ -10,9 +10,9 @@
     <%= step.body %>
   </div>
   <h3><%= _("Tools") if !step.tools.empty? %></h3>
-  <div>
+  <div class="tools">
     <% step.tools.each do |tool| %>
-      <div>
+      <div class="item">
         <%= link_to tool.name, tool.url %>
       </div>
     <% end %>
