--- a/plugins/community_track/views/content_viewer/track.rhtml
+++ b/plugins/community_track/views/content_viewer/track.rhtml
@@ -1,4 +1,4 @@
-<% extend CommunityTrackPlugin::Helpers::StepHelper %>
+<% extend CommunityTrackPlugin::StepHelper %>
 
 <% form_tag({:controller => 'community_track_plugin_myprofile', :action => 'save_order', :track => track}) do %>
 <div id="track">
