--- a/plugins/community_track/views/cms/community_track_plugin/_step.rhtml
+++ b/plugins/community_track/views/cms/community_track_plugin/_step.rhtml
@@ -2,9 +2,10 @@
 
 <%= render :file => 'shared/tiny_mce' %>
 
-<%= required f.text_field('name', :size => '64', :maxlength => 150) %>
-
-<%= labelled_form_field(_('Start date'), pick_date(:article, :start_date)) %>
-<%= labelled_form_field(_('End date'), pick_date(:article, :end_date)) %>
+<div>
+  <%= required f.text_field('name', :size => '64', :maxlength => 150) %>
+  <%= labelled_form_field(_('Start date'), pick_date(:article, :start_date)) %>
+  <%= labelled_form_field(_('End date'), pick_date(:article, :end_date)) %>
+</div>
 
 <%= render :partial => 'shared/lead_and_body', :locals => {:tiny_mce => true, :body_label => 'Description:'} %>
