--- a/plugins/community_track/public/style.css
+++ b/plugins/community_track/public/style.css
@@ -112,7 +112,7 @@
   height: 250px;
 }
 
-#track #sortable {
+#track .step_list {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -132,7 +132,7 @@
 
 #track .step .date {
   font-size: 12px;
-  color: #999;
+  color: #AAA;
 }
 
 #track .step .lead {
