--- a/plugins/community_track/views/content_viewer/track.rhtml
+++ b/plugins/community_track/views/content_viewer/track.rhtml
@@ -7,7 +7,7 @@
   </div>
 
   <h3><%= _("Steps") %></h3>
-    <ul id="sortable">
+    <ul id="sortable" class="step_list">
     <% track.steps.each do |step| %>
       <li class="step">
         <%= hidden_field_tag "step_ids[]", step.id %>
@@ -22,8 +22,25 @@
       </li>
     <% end %>
     </ul>
-  </div>
   <% if track.allow_create?(user) %>
+    <div id="hidden_steps">
+      <h3><%= _('Hidden Steps') %></h3>
+      <ul class="step_list">
+      <% track.hidden_steps.each do |step| %>
+        <li class="step">
+          <%= hidden_field_tag "step_ids[]", step.id %>
+          <div class="position"></div>
+          <div class="content">
+            <div class="date">
+              <%= show_period(step.start_date, step.end_date) %>
+            </div>
+            <div class="name"><%= link_to step.name, step.url %></div>
+            <div class="lead"><%= step.body %></div>
+          </div>
+        </li>
+      <% end %>
+      </ul>
+    </div>
     <div class="steps_actions">
         <% content_tag('a', :href => url_for({:controller => 'cms', :action => 'new', :type => "CommunityTrackPlugin::Step", :parent_id => track.id}), :class => 'button with-text icon-add') do %>
           <strong><%= _("New %s") % CommunityTrackPlugin::Step.short_description %></strong>
@@ -43,3 +60,4 @@
   <% end %>
 </div>
 <% end %>
+</div>
