--- a/plugins/community_track/views/content_viewer/step.rhtml
+++ b/plugins/community_track/views/content_viewer/step.rhtml
@@ -9,7 +9,12 @@
   <div>
     <%= step.body %>
   </div>
-  <h3><%= _("Tools") if !step.tools.empty? %></h3>
+  <h3><%= _("Tools") %></h3>
+  <% if step.allow_create?(user) %>
+    <div class="actions">
+      <%= colorbox_button(:new, _('New Tool'), profile.admin_url.merge(:controller => 'cms', :action => 'new', :parent_id => @page )) unless remove_content_button(:new) %>
+    </div>
+  <% end %>
   <div class="tools">
     <% step.tools.each do |tool| %>
       <div class="item">
