--- a/plugins/community_track/views/content_viewer/track.rhtml
+++ b/plugins/community_track/views/content_viewer/track.rhtml
@@ -7,6 +7,26 @@
   </div>
 
   <h3><%= _("Steps") %></h3>
+
+  <% if track.allow_create?(user) %>
+    <div class="actions">
+        <% content_tag('a', :href => url_for({:controller => 'cms', :action => 'new', :type => "CommunityTrackPlugin::Step", :parent_id => track.id}), :class => 'button with-text icon-add') do %>
+          <strong><%= _("New %s") % CommunityTrackPlugin::Step.short_description %></strong>
+        <% end %>
+        <a href="#" class="reorder_button button with-text icon-up" onclick="enableReorder();"><%= _('Reorder Steps') %></a>
+        <%= submit_button :save, _('Save Order'), :class => "save_button" %>
+    </div>
+    <script>
+      function enableReorder() {
+        jQuery(".reorder_button").hide();
+        jQuery(".save_button").show();
+        jQuery("#sortable li").addClass("ui-state-default");
+        jQuery("#sortable").sortable();
+        jQuery("#sortable").disableSelection();
+      }
+    </script>
+    <% end %>
+
     <ul id="sortable" class="step_list">
     <% track.steps.each do |step| %>
       <li class="step">
@@ -41,22 +61,6 @@
       <% end %>
       </ul>
     </div>
-    <div class="steps_actions">
-        <% content_tag('a', :href => url_for({:controller => 'cms', :action => 'new', :type => "CommunityTrackPlugin::Step", :parent_id => track.id}), :class => 'button with-text icon-add') do %>
-          <strong><%= _("New %s") % CommunityTrackPlugin::Step.short_description %></strong>
-        <% end %>
-        <a href="#" class="reorder_button button with-text icon-up" onclick="enableReorder();"><%= _('Reorder Steps') %></a>
-        <%= submit_button :save, _('Save Order'), :class => "save_button" %>
-    </div>
-    <script>
-      function enableReorder() {
-        jQuery(".reorder_button").hide();
-        jQuery(".save_button").show();
-        jQuery("#sortable li").addClass("ui-state-default");
-        jQuery("#sortable").sortable();
-        jQuery("#sortable").disableSelection();
-      }
-    </script>
   <% end %>
 </div>
 <% end %>
