--- a/app/views/memberships/new_community.rhtml
+++ b/app/views/memberships/new_community.rhtml
@@ -45,10 +45,12 @@
   </div>
 
   <%= template_options(Community, 'community')%>
+  
+  <%= hidden_field_tag('back_to', @back_to) %>
 
   <% button_bar do %>
     <%= submit_button(:save, _('Create')) %>
-    <%= button(:cancel, _('Cancel'), :action => 'index') %>
+    <%= button(:cancel, _('Cancel'), @back_to ) %>
   <% end %>
 
 <% end %>
