--- a/plugins/community_track/views/community_track_plugin_public/select_community.rhtml
+++ b/plugins/community_track/views/community_track_plugin_public/select_community.rhtml
@@ -13,7 +13,7 @@
 <% end %>
 
 <% button_bar do %>
-  <%= button(:add, __('Create a new community'), :controller => 'memberships', :action => 'new_community', :profile => user.identifier) %>
+  <%= button(:add, __('Create a new community'), :controller => 'memberships', :action => 'new_community', :profile => user.identifier, :back_to => @back_to) %>
 <% end %>
 
 <% form_tag({:controller => 'community_track_plugin_public', :action => 'select_community', :profile => user.identifier}) do %>
